# pbpk-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.celery.yml  docker-compose.hardened.yml  pyproject.toml  v0.3.4.md
cisplatin_models/: 20241127 model 4.2.3 - kidney + PT + GFR + active secretion with blood compartments oct2 and clearance rate.mmd  20260302 populatio-based in git.R  cisplatin_population_rxode2_model.R
docker/: rxode2-worker.Dockerfile
docs/: github_publication_checklist.md  hardening_migration_notes.md  pbk_reviewer_signoff_checklist.md  pbpk_model_onboarding_checklist.md  post_release_audit_plan.md
examples/: performance_evidence_bundle.template.json  uncertainty_evidence_bundle.template.json
reference_models/: reference_compound_population_rxode2_model.R
schemas/: README.md  assessmentContext.v1.json  pbpkQualificationSummary.v1.json
scripts/: apply_rxode2_patch.py  build_cimetidine_cross_system_demo.py  build_rxode2_worker_image.sh  check_distribution_artifacts.py  check_installed_package_contract.py  check_release_metadata.py  check_runtime_contract_env.py  contract_stage_utils.py  deploy_hardened_stack.sh  deploy_rxode2_stack.sh  deploy_source_overlay_stack.sh  esqlabs_models.py  export_api_docs.py  fetch_regulatory_goldset.py  generate_contract_artifacts.py  generate_reference_model_live_audit_pdf.py  generate_regulatory_goldset_audit.py  generate_repo_concat.py  install_runtime_patches.py  ospsuite_bridge.R  release_readiness_check.py  render_cimetidine_case_study_figures.py  runtime_patch_manifest.py  validate_model_manifests.py  wait_for_runtime_ready.py  workspace_model_smoke.py
tests/: test_config_contract.py  test_deployment_profiles.py  test_distribution_artifacts.py  test_export_api_docs.py  test_external_pbpk_bundle.py  test_generate_repo_concat_script.py  test_load_simulation_contract.py  test_model_discovery_live_stack.py  test_model_manifest.py  test_model_path_env_resolution.py  test_ngra_object_schemas.py  test_oecd_bridge.py  test_oecd_live_stack.py  test_packaged_adapter_namespace.py  test_packaged_contract_artifacts.py  test_packaged_mcp_namespace.py  test_packaged_resource_routes.py  test_packaged_tool_registry.py  test_regulatory_goldset_analysis.py  test_regulatory_goldset_manifest.py  test_release_metadata.py  test_release_readiness_script.py  test_review_signoff.py  test_runtime_security_live_stack.py  test_security_posture.py  test_trust_surface.py  test_validate_model_manifests_script.py  test_workspace_model_smoke_script.py
(+105 files in other folders)
